--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -14,6 +14,7 @@ Scrolling
 }
 
 section {
+    position: relative;
     scroll-snap-align: start;
     overflow-x: hidden;
 }
@@ -61,6 +62,19 @@ body {
     font-family: "Share Tech", serif;
     margin: 0px;
 }
+
+/*
+//////////////////////////////////////////////////////////////////////////////
+Waves/Sections Styling
+*/
+section {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
+
 
 /*
 //////////////////////////////////////////////////////////////////////////////
@@ -275,11 +289,6 @@ section {
     max-width: 30%;
     max-height: 300px;
     transform: translateX(-80px);
-}
-
-#wave {
-    position: absolute;
-    bottom: 0;
 }
 
 .intro h1 {
