added wave background to hobbies sectoion

--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -154,7 +154,8 @@
         </section>
 
         <!-- New section for hobbies -->
-        <section class="hobbies-container" id="hobbies">
+        <section class="hobbies-container" id="hobbies"
+        style="background-image: url('../static/img/waves/{{member}}_background2.svg');">
             <div class="hobbies">
                 <h2>My Hobbies</h2>
                 {% block hobbies %}
