Updated all individual members info, also added right margin to university pictures. And added experiences section format

--- a/app/templates/juan.html
+++ b/app/templates/juan.html
@@ -190,27 +190,41 @@
 {% endblock %}
 
 {% block first %}
-<div class="project-image weather-image"></div>
+<img src="../static/img/project-images/juan-project1.jpg" alt="weather app image" class="project-image">
 <h3>
-    Weather App
+    Your Study Space
 </h3>
 <p>
-    Application showing global weather data from different major cities. Designed the interface with SwiftUI.
+    Users can log in, save tasks, start a timer, see local weather, and listen to music. Created using CSS, React, Node.js, Express and MongoDB.
 </p>
-<a href="https://github.com/noahromo/Weather" class="project-link">
+<a href="https://github.com/jpablo2002/Your-Study-Space" class="project-link">
     See Code
 </a>
 {% endblock %}
 
 {% block second %}
-<div class="project-image simonsays-image"></div>
+<img src="../static/img/project-images/juan-project-two.jpg" alt="weather app image" class="project-image">
 <h3>
-    Simon Says
+    Spacestagram Web App
 </h3>
 <p>
-    Developed a fun web-based game that resembles the classic Simon Says game using HTML, CSS, and JavaScript.
+    Application showing picture from NASA's Picture of the Day API. Created front-end using HTML/CSS, and back-end with Node.js and Express.
 </p>
-<a href="https://github.com/noahromo/LightAndSoundMemoryGame" class="project-link">
+<a href="https://github.com/jpablo2002/Spacestagram" class="project-link">
     See Code
 </a>
+{% endblock %}
+
+{% block experiences %}
+<p class="tag">
+    Production Engineering Fellow
+</p>
+<p class="org">
+    MLH Fellowship Powered by Meta
+</p>
+<ul>
+    <li>Worked with mentors from Meta to gain the skills needed to keep products like Facebook, WhatsApp, Instagram, and Oculus running</li>
+    <li>Learned the tools and concepts necessary to efficiently build/manage a production Linux infrastructure</li>
+    <li>Built this portfolio as part of the week 1 MLH Fellowship Hackathon</li>
+</ul>
 {% endblock %}
