--- a/app/templates/noah.html
+++ b/app/templates/noah.html
@@ -196,3 +196,28 @@
     See Code
 </a>
 {% endblock %}
+
+{% block experiences %}
+<p class="tag">
+    Production Engineering Fellow
+</p>
+<p class="org">
+    MLH Fellowship Powered by Meta
+</p>
+<ul>
+    <li>Worked with mentors from Meta to gain the skills needed to keep products like Facebook, WhatsApp, Instagram, and Oculus running</li>
+    <li>Learned the tools and concepts necessary to efficiently build/manage a production Linux infrastructure</li>
+    <li>Built this portfolio as part of the week 1 MLH Fellowship Hackathon</li>
+</ul>
+<p class="tag">
+    Tech Lead
+</p>
+<p class="org">
+    Google Developer Student Club @ FSU
+</p>
+<ul>
+    <li>Founded a GDSC chapter here at FSU that helps student developers learn industry skills</li>
+    <li>Lecture members each week on different Google technologies such as TensorFlow</li>
+    <li>Created a game repository that uses machine learning to build artificial bots</li>
+</ul>
+{% endblock %}
