--- a/app/templates/profilebase.html
+++ b/app/templates/profilebase.html
@@ -101,12 +101,8 @@
         <section class="experiences-container" id="experiences">
             <div class="experiences">
                 <h2>Where I've Worked</h2>
-                <p>
-                    MLH Fellow
-                </p>
-                <p>
-                    Tech Lead
-                </p>
+                {% block experiences %} 
+                {% endblock %}
             </div>
         </section>
 
