Changed nav bar background color to black

--- a/app/templates/juan.html
+++ b/app/templates/juan.html
@@ -242,6 +242,6 @@
 <ul>
     <li>Worked with mentors from Meta to gain the skills needed to keep products like Facebook, WhatsApp, Instagram, and Oculus running</li>
     <li>Learned the tools and concepts necessary to efficiently build/manage a production Linux infrastructure</li>
-    <li>Built this portfolio as part of the week 1 MLH Fellowship Hackathon</li>
+    <li>Built this portfolio as part of the MLH Fellowship Hackathon</li>
 </ul>
 {% endblock %}
