--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -205,7 +205,7 @@ nav img {
     top: 0;
     right: -20%;
     color: white;
-    background-color: #1f1f31;
+    background-color: #000000;
     transition: right 0.5s ease;
     height: 100vh;
 }
@@ -433,7 +433,8 @@ About/Edu Section Styling
 .about:hover,
 .edu:hover,
 .experiences:hover,
-.skills:hover {
+.skills:hover,
+.hobbies:hover {
     transform: scale(1.05);
     transition: all 1s ease;
 }
