--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -30,7 +30,8 @@
         </div>
     </header>
     <div class="container">
-        <img src="../static/img/baboons.jpg" class="baboon">
+        <h1 id="baboon">Boisterous Baboons</h1>
+        <!--<img src="../static/img/baboons.jpg" class="baboon">-->
         <div class="home-profile">
             <div class="person">
                 <h1>Juan</h1>
