--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <div class="container">
-        <h1 id="baboon">Boisterous Baboons</h1>
+        <h1 id="baboon">We are Team Boisterous</h1>
         <!--<img src="../static/img/baboons.jpg" class="baboon">-->
         <div class="home-profile">
             <div class="person">
