new redeployment script + small text change for test

--- a/app/templates/malik.html
+++ b/app/templates/malik.html
@@ -43,7 +43,7 @@
     Sched-U-Bowl
 </h3>
 <p>
-    Built a bowling alley reservation system designed to take the stress out of planning a bowling session, using the
+    TEST CHANGE Built a bowling alley reservation system designed to take the stress out of planning a bowling session, using the
     Calendly API and MongoDB.
 </p>
 <a href="https://github.com/malbaker/bowling-demo" target="_blank" class="project-link">
